--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ankh-visionary-campaign</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>ANKH AI Solutions - Personalized Marketing Platform</title>
+    <meta name="description" content="AI-powered personalized marketing platform for video analytics and customer profiling" />
+    <meta name="author" content="ANKH AI Solutions" />
 
-    <meta property="og:title" content="ankh-visionary-campaign" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="ANKH AI Solutions - Personalized Marketing Platform" />
+    <meta property="og:description" content="AI-powered personalized marketing platform for video analytics and customer profiling" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
