--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:title" content="ANKH AI Solutions - Personalized Marketing Platform" />
     <meta property="og:description" content="AI-powered personalized marketing platform for video analytics and customer profiling" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ankh_ai" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
