--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>ANKH AI Solutions - Personalized Marketing Platform</title>
     <meta name="description" content="AI-powered personalized marketing platform for video analytics and customer profiling" />
     <meta name="author" content="ANKH AI Solutions" />
+    
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
